Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-4952

[C++] Equals / ApproxEquals behaviour undefined on FP NaNs

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Major
    • Resolution: Fixed
    • 0.12.1
    • 0.13.0
    • C++

    Description

      On floating-point NaN values, the behaviour of Array::Equals and Array::ApproxEquals is currently undefined. It should probably default to something useful (and possibly be overridable using a bool parameter).

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 3h 40m
                  3h 40m