ARROW-4952: [C++] Floating-point comparisons should consider NaNs unequal