cpp/src/arrow/array.cc
@@ -106,24 +106,45 @@ int64_t ArrayData::GetNullCount() const {
 
 int64_t Array::null_count() const { return data_->GetNullCount(); }
 
-bool Array::Equals(const Array& arr) const { return ArrayEquals(*this, arr); }
+bool Array::Equals(const Array& arr, const EqualOptions& opts) const {
+  return ArrayEquals(*this, arr, opts);
+}
 
-bool Array::Equals(const std::shared_ptr<Array>& arr) const {
+bool Array::Equals(const std::shared_ptr<Array>& arr, const EqualOptions& opts) const {
   if (!arr) {
     return false;
   }
-  return Equals(*arr);
+  return Equals(*arr, opts);
 }
 
-bool Array::ApproxEquals(const Array& arr, double epsilon) const {
-  return ArrayApproxEquals(*this, arr, epsilon);
+bool Array::ApproxEquals(const Array& arr, const EqualOptions& opts) const {
+  return ArrayApproxEquals(*this, arr, opts);
 }
 
-bool Array::ApproxEquals(const std::shared_ptr<Array>& arr, double epsilon) const {
+bool Array::ApproxEquals(const std::shared_ptr<Array>& arr,
+                         const EqualOptions& opts) const {
   if (!arr) {
     return false;
   }
-  return ApproxEquals(*arr, epsilon);
+  return ApproxEquals(*arr, opts);
+}
+
+bool Array::RangeEquals(const Array& other, int64_t start_idx, int64_t end_idx,
+                        int64_t other_start_idx) const {
+  return ArrayRangeEquals(*this, other, start_idx, end_idx, other_start_idx);
+}
+
+bool Array::RangeEquals(const std::shared_ptr<Array>& other, int64_t start_idx,
+                        int64_t end_idx, int64_t other_start_idx) const {
+  if (!other) {
+    return false;
+  }
+  return ArrayRangeEquals(*this, *other, start_idx, end_idx, other_start_idx);
+}
+
+bool Array::RangeEquals(int64_t start_idx, int64_t end_idx, int64_t other_start_idx,
+                        const Array& other) const {
+  return ArrayRangeEquals(*this, other, start_idx, end_idx, other_start_idx);
 }
 
 bool Array::RangeEquals(int64_t start_idx, int64_t end_idx, int64_t other_start_idx,
@@ -131,12 +152,7 @@ bool Array::RangeEquals(int64_t start_idx, int64_t end_idx, int64_t other_start_
   if (!other) {
     return false;
   }
-  return RangeEquals(*other, start_idx, end_idx, other_start_idx);
-}
-
-bool Array::RangeEquals(const Array& other, int64_t start_idx, int64_t end_idx,
-                        int64_t other_start_idx) const {
-  return ArrayRangeEquals(*this, other, start_idx, end_idx, other_start_idx);
+  return ArrayRangeEquals(*this, *other, start_idx, end_idx, other_start_idx);
 }
 
 std::shared_ptr<Array> Array::Slice(int64_t offset, int64_t length) const {
